Ensure accordion icons are visible (#55)

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -58,6 +58,10 @@ code {
   background-color: var(--subcard-color);
 }
 
+.categoriesContainer svg {
+  fill: var(--subcard-icon-color);
+}
+
 @media (max-width: 600px) {
   .cardTitleContainer {
     gap: var(--spacing-s);
